syntax = "proto3";

package updates_stream;

 message Metadata {
     repeated MetadataMap headers = 1;
 }

message MetadataMap {
    string key = 1;
    repeated string value = 2;
}